tbt.css
footer {
    position: fixed;
	bottom: 0;
    font-size: 15px;
    color: grey;
}

body {
    height: 100%;
}

.container {
    display: flex;           /* establish flex container */
    flex-direction: column;  /* make main axis vertical */
    justify-content: center; 
    align-items: center;     
    align-content: center;
    height: 80vh;
}

.box {
    margin: 5px;
    text-align: center;     
}

